feat: add index action to certification requests
